List Tags UI Changed

--- a/Bloggie.Web/Views/AdminTags/List.cshtml
+++ b/Bloggie.Web/Views/AdminTags/List.cshtml
@@ -49,7 +49,7 @@
                                 asp-route-sortBy="Name"
                                 asp-route-sortDirection="Desc"
                                 asp-route-searchQuery="@ViewBag.SearchQuery">
-                                    <i class="bi bi-arrow-up"></i>
+                                    <i class="bi bi-arrow-down"></i>
                                 </a>
                             </span>
                         </span>
@@ -75,7 +75,7 @@
                                 asp-route-sortBy="DisplayName"
                                 asp-route-sortDirection="Desc"
                                 asp-route-searchQuery="@ViewBag.SearchQuery">
-                                    <i class="bi bi-arrow-up"></i>
+                                    <i class="bi bi-arrow-down"></i>
                                 </a>
                             </span>
                         </span>
